<resources>
    <string name="app_name">LoanClientManagement</string>

    <!-- bottom_navigation_view_menu -->
    <string name="menu_clients_fragment">고객</string>
    <string name="menu_calendar_fragment">캘린더</string>

    <!-- clients_fragment_toolbar -->
    <string name="menu_clients_fragment_search">고객 검색</string>
    <string name="menu_clients_fragment_add_client">고객 추가</string>

    <!-- item_client -->
    <string name="item_client_profile">고객 프로필 사진</string>

    <!-- search_client_fragment -->
    <string name="search_client_fragment_hint">고객 이름을 입력해주세요.</string>
    <string name="search_client_fragment_cancel">취소</string>
    <string name="search_client_fragment">최근 검색어</string>
    <string name="search_client_fragment_result">검색 결과</string>

    <!-- add_client_fragment_toolbar -->
    <string name="menu_add_client_fragment_close">닫기</string>
    <string name="add_client_fragment_security">담보대출</string>
    <string name="add_client_fragment_jeonse">전세대출</string>
    <string name="add_client_fragment_name">성명</string>
    <string name="add_client_fragment_name_hint">고객 성명을 입력하세요.</string>
    <string name="add_client_fragment_rmm">주민번호</string>
    <string name="add_client_fragment_rmm_front_hint">970703</string>
    <string name="add_client_fragment_hyphen">-</string>
    <string name="add_client_fragment_rmm_back_hint">1</string>
    <string name="add_client_fragment_rmm_hidden">******</string>
    <string name="add_client_fragment_call">연락처</string>
    <string name="add_client_fragment_call_front">010</string>
    <string name="add_client_fragment_call_middle_hint">8616</string>
    <string name="add_client_fragment_call_back_hint">2217</string>
    <string name="add_client_fragment_meeting">Meeting</string>
    <string name="add_client_fragment_meeting_date">2022.02.04 (금) 14:00</string>
    <string name="add_client_fragment_loan_start">실행일</string>
    <string name="add_client_fragment_loan_start_date">2022.02.04 (금)</string>
    <string name="add_client_fragment_add">추가</string>

    <!-- menu_client_info_fragment -->
    <string name="menu_client_info_fragment">수정</string>

    <!-- item_doc_image -->
    <string name="item_doc_image">대출 서류 이미지</string>
</resources>
