<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/tb_add_client"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="1dp"
                app:layout_constraintTop_toTopOf="parent"
                app:menu="@menu/toolbar_add_client"
                app:title="고객 추가"
                app:titleCentered="true"
                app:titleTextColor="@color/black"
                tools:layout_editor_absoluteX="0dp" />

            <RadioGroup
                android:id="@+id/rg_add_client"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checkedButton="@id/rb_add_client_security"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/tb_add_client">

                <RadioButton
                    android:id="@+id/rb_add_client_security"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@string/add_client_fragment_security" />

                <RadioButton
                    android:id="@+id/rb_add_client_jeonse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/add_client_fragment_jeonse" />
            </RadioGroup>

            <TextView
                android:id="@+id/tv_add_client_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="36dp"
                android:text="@string/add_client_fragment_name"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/et_add_client_name"
                app:layout_constraintStart_toStartOf="@id/gl_attribute"
                app:layout_constraintTop_toTopOf="@id/et_add_client_name" />

            <EditText
                android:id="@+id/et_add_client_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:hint="@string/add_client_fragment_name_hint"
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxLength="10"
                android:maxLines="1"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@+id/gl_value"
                app:layout_constraintTop_toBottomOf="@id/rg_add_client" />

            <TextView
                android:id="@+id/tv_add_client_rrm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_client_fragment_rmm"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/et_add_client_rrm_front"
                app:layout_constraintStart_toStartOf="@+id/gl_attribute"
                app:layout_constraintTop_toTopOf="@id/et_add_client_rrm_front" />

            <EditText
                android:id="@+id/et_add_client_rrm_front"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/add_client_fragment_rmm_front_hint"
                android:importantForAutofill="no"
                android:inputType="number"
                android:letterSpacing="0.2"
                android:maxLength="6"
                android:maxLines="1"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@+id/et_add_client_name"
                app:layout_constraintTop_toBottomOf="@id/et_add_client_name" />

            <TextView
                android:id="@+id/tv_add_client_hyphen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/add_client_fragment_hyphen"
                android:textSize="28sp"
                app:layout_constraintBottom_toBottomOf="@id/et_add_client_rrm_front"
                app:layout_constraintEnd_toStartOf="@id/et_add_client_rrm_back"
                app:layout_constraintStart_toEndOf="@id/et_add_client_rrm_front"
                app:layout_constraintTop_toTopOf="@id/et_add_client_rrm_front" />

            <EditText
                android:id="@+id/et_add_client_rrm_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:hint="@string/add_client_fragment_rmm_back_hint"
                android:importantForAutofill="no"
                android:inputType="text"
                android:letterSpacing="0.2"
                android:maxLength="1"
                android:maxLines="1"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/et_add_client_rrm_front"
                app:layout_constraintStart_toEndOf="@id/tv_add_client_hyphen"
                app:layout_constraintTop_toTopOf="@+id/et_add_client_rrm_front" />

            <TextView
                android:id="@+id/tv_add_client_hidden"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:letterSpacing="0.2"
                android:text="@string/add_client_fragment_rmm_hidden"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="@id/et_add_client_rrm_front"
                app:layout_constraintStart_toEndOf="@id/et_add_client_rrm_back"
                app:layout_constraintTop_toTopOf="@id/et_add_client_rrm_front" />

            <TextView
                android:id="@+id/tv_add_client_call"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_client_fragment_call"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/et_add_client_call_middle"
                app:layout_constraintStart_toStartOf="@id/gl_attribute"
                app:layout_constraintTop_toTopOf="@id/et_add_client_call_middle" />

            <TextView
                android:id="@+id/tv_add_client_call_front"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:letterSpacing="0.2"
                android:text="@string/add_client_fragment_call_front"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@id/et_add_client_call_middle"
                app:layout_constraintStart_toStartOf="@+id/et_add_client_name"
                app:layout_constraintTop_toTopOf="@+id/et_add_client_call_middle" />

            <TextView
                android:id="@+id/tv_add_client_call_hyphen_front"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/add_client_fragment_hyphen"
                android:textSize="28sp"
                app:layout_constraintBottom_toBottomOf="@id/et_add_client_call_middle"
                app:layout_constraintEnd_toStartOf="@id/et_add_client_call_middle"
                app:layout_constraintStart_toEndOf="@id/tv_add_client_call_front"
                app:layout_constraintTop_toTopOf="@id/et_add_client_call_middle" />

            <EditText
                android:id="@+id/et_add_client_call_middle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:hint="@string/add_client_fragment_call_middle_hint"
                android:importantForAutofill="no"
                android:inputType="number"
                android:letterSpacing="0.2"
                android:maxLength="4"
                android:maxLines="1"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@id/tv_add_client_call_hyphen_front"
                app:layout_constraintTop_toBottomOf="@id/et_add_client_rrm_front" />

            <TextView
                android:id="@+id/tv_add_client_call_hyphen_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/add_client_fragment_hyphen"
                android:textSize="28sp"
                app:layout_constraintBottom_toBottomOf="@id/et_add_client_call_middle"
                app:layout_constraintStart_toEndOf="@id/et_add_client_call_middle"
                app:layout_constraintTop_toTopOf="@id/et_add_client_call_middle" />

            <EditText
                android:id="@+id/et_add_client_call_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:hint="@string/add_client_fragment_call_back_hint"
                android:importantForAutofill="no"
                android:inputType="number"
                android:letterSpacing="0.2"
                android:maxLength="4"
                android:maxLines="1"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@id/tv_add_client_call_hyphen_back"
                app:layout_constraintTop_toTopOf="@+id/et_add_client_call_middle" />

            <TextView
                android:id="@+id/tv_add_client_meeting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_client_fragment_meeting"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/tv_add_client_meeting_date"
                app:layout_constraintStart_toStartOf="@id/gl_attribute"
                app:layout_constraintTop_toTopOf="@id/tv_add_client_meeting_date" />

            <TextView
                android:id="@+id/tv_add_client_meeting_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/add_client_fragment_meeting_date"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/et_add_client_name"
                app:layout_constraintTop_toBottomOf="@id/et_add_client_call_middle" />

            <TextView
                android:id="@+id/tv_add_client_meeting_date_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:background="@drawable/ic_calendar_24"
                app:layout_constraintBottom_toBottomOf="@id/tv_add_client_meeting_date"
                app:layout_constraintStart_toEndOf="@id/tv_add_client_meeting_date"
                app:layout_constraintTop_toTopOf="@id/tv_add_client_meeting_date" />

            <TextView
                android:id="@+id/tv_add_client_loan_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_client_fragment_loan_start"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/tv_add_client_loan_start_date"
                app:layout_constraintStart_toStartOf="@id/gl_attribute"
                app:layout_constraintTop_toTopOf="@id/tv_add_client_loan_start_date" />

            <TextView
                android:id="@+id/tv_add_client_loan_start_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/add_client_fragment_loan_start_date"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/et_add_client_name"
                app:layout_constraintTop_toBottomOf="@id/tv_add_client_meeting_date" />

            <TextView
                android:id="@+id/tv_add_client_loan_start_date_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:background="@drawable/ic_calendar_24"
                app:layout_constraintBottom_toBottomOf="@id/tv_add_client_loan_start_date"
                app:layout_constraintStart_toEndOf="@+id/tv_add_client_loan_start_date"
                app:layout_constraintTop_toTopOf="@id/tv_add_client_loan_start_date" />

            <ImageView
                android:id="@+id/iv_add_client_fragment"
                android:layout_width="350dp"
                android:layout_height="350dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/add_client_fragment_load_doc_image"
                android:src="@drawable/ic_launcher_background"
                app:layout_constraintBottom_toTopOf="@id/btn_add_client_fragment_add"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.488"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_add_client_loan_start_date" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_add_client_fragment_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:text="@string/add_client_fragment_add"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_add_client_fragment" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_attribute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="28dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintStart_toEndOf="@id/tv_add_client_meeting" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>
